fix dialog alignment

--- a/public/css/edit.less
+++ b/public/css/edit.less
@@ -461,7 +461,6 @@
 /* TODO */
 
 #TODO {
-    margin-left: -300px;
     width: 600px;
 }
 
@@ -488,8 +487,6 @@
 }
 
 #welcome {
-    margin-left: -300px;
-    margin-top: -185px;
     width: 560px;
 
     .lpOr {
@@ -512,7 +509,6 @@
 }
 
 #forgotPassword {
-    margin-left: -300px;
     width: 560px;
 }
 
@@ -568,11 +564,10 @@
 }
 
 #importValidate {
-    width: 650px;
-    margin-left: -350px;
-    height: 500px;
-    margin-top: -300px;
     overflow-y: scroll;
+    height: 500px;
+    width: 650px;
+
     .lpButton {
         margin-bottom: 30px;
     }
@@ -594,7 +589,6 @@
 }
 
 #help {
-    margin-left: -400px;
     width: 800px;
 }
 
